@@ -469,7 +469,6 @@ Size=20x4
 
 # If you have an HD66712, a KS0073 or an other 'almost HD44780-compatible',
 # set this flag to get into extended mode (4-line linear).
-# This flag is NOT the old obsolete Extended option.
 #ExtendedMode=yes
 
 # Character map to to map ISO-8859-1 to the LCD's character set
@@ -525,6 +524,10 @@ Size=20x4
 # serial number [exactly as listed by usbview]
 # (if not given, the 1st IOWarrior found gets used)
 #SerialNumber=00000674
+
+# If you have an HD66712, a KS0073 or an other 'almost HD44780-compatible',
+# set this flag to get into extended mode (4-line linear).
+#ExtendedMode=yes
 
 # Specifies if the last line is pixel addressable or it controls an
 # underline effect. [default: true (= pixel addressable); legal: yes, no]
